hphp/test/slow/readonly/readonly_static_methods.php.expectf
Fatal error: Static methods do not need to be marked readonly in %s on line 3
